feat: (processm.services) add GUI for managing data storage (#86)
Former-commit-id: 5086e2ab261d6fa5c34958d018099f14ad06a674
