# processm.services/src/main/kotlin/processm/services/api/DataSourcesApi.kt
@@ -12,9 +12,9 @@ import io.ktor.response.*
 import io.ktor.routing.Route
 import org.antlr.v4.runtime.RecognitionException
 import org.koin.ktor.ext.inject
-import processm.services.api.models.DataStore
-import processm.services.api.models.DataStoreCollectionMessageBody
-import processm.services.api.models.DataStoreMessageBody
+import processm.core.helpers.mapToArray
+import processm.dbmodels.models.OrganizationRoleDto
+import processm.services.api.models.*
 import processm.services.logic.DataStoreService
 import processm.services.logic.LogsService
 import java.io.OutputStream
@@ -24,9 +24,9 @@ import javax.xml.stream.XMLStreamException
 
 @KtorExperimentalLocationsAPI
 fun Route.DataStoresApi() {
+    val connectionStringPropertyName = "connection-string"
     val dataStoreService by inject<DataStoreService>()
     val logsService by inject<LogsService>()
-
 
     authenticate {
         post<Paths.DataStores> { pathParams ->
@@ -46,10 +46,44 @@ fun Route.DataStoresApi() {
             val principal = call.authentication.principal<ApiUser>()!!
             principal.ensureUserBelongsToOrganization(pathParams.organizationId)
             val dataStores = dataStoreService.allByOrganizationId(organizationId = pathParams.organizationId).map {
-                DataStore(it.name, it.id, it.creationDate)
+                DataStore(it.name, it.id, size = null, it.creationDate)
             }.toTypedArray()
 
             call.respond(HttpStatusCode.OK, DataStoreCollectionMessageBody(dataStores))
+        }
+
+        get<Paths.DataStore> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            val dataStoreSize = dataStoreService.getDatabaseSize(pathParams.dataStoreId.toString())
+            val dataStore = dataStoreService.getDataStore(pathParams.dataStoreId)
+
+            call.respond(HttpStatusCode.OK, DataStoreMessageBody(DataStore(
+                dataStore.name,
+                dataStore.id,
+                dataStoreSize.toInt(),
+                dataStore.creationDate
+            )))
+        }
+
+        delete<Paths.DataStore> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            dataStoreService.removeDataStore(pathParams.dataStoreId)
+
+            call.respond(HttpStatusCode.NoContent)
+        }
+
+        patch<Paths.DataStore> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            val dataStore = call.receiveOrNull<DataStoreMessageBody>()?.data
+                ?: throw ApiException("The provided data store data cannot be parsed")
+            dataStoreService.renameDataStore(pathParams.dataStoreId, dataStore.name)
+
+            call.respond(HttpStatusCode.NoContent)
         }
 
         post<Paths.Logs> { pathParams ->
@@ -105,6 +139,77 @@ fun Route.DataStoresApi() {
             } catch (e: IllegalArgumentException) {
                 throw ApiException(e.message)
             }
+        }
+
+        delete<Paths.Log> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            dataStoreService.ensureUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            logsService.removeLog(pathParams.dataStoreId, pathParams.identityId)
+
+            call.respond(HttpStatusCode.NoContent)
+        }
+
+        get<Paths.DataConnectors> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
+            val dataConnectors = dataStoreService.getDataConnectors(pathParams.dataStoreId).mapToArray {
+                DataConnector(it.id, it.name, it.lastConnectionStatus, it.connectionProperties)
+            }
+
+            call.respond(HttpStatusCode.OK, DataConnectorCollectionMessageBody(dataConnectors))
+        }
+
+        post<Paths.DataConnectors> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
+            val dataConnector = call.receiveOrNull<DataConnectorMessageBody>()?.data
+                ?: throw ApiException("The provided data connector configuration cannot be parsed")
+            val connectorProperties = dataConnector.properties ?: throw ApiException("Connector configuration is required")
+            val connectorName = dataConnector.name ?: throw ApiException("A name for data connector is required")
+            val connectionString = connectorProperties[connectionStringPropertyName]
+            val dataConnectorId =
+                if (connectionString.isNullOrBlank()) dataStoreService.createDataConnector(pathParams.dataStoreId, connectorName, connectorProperties)
+                else dataStoreService.createDataConnector(pathParams.dataStoreId, connectorName, connectionString)
+
+            call.respond(HttpStatusCode.OK,
+                DataConnectorMessageBody(DataConnector(dataConnectorId, connectorName, lastConnectionStatus = null)))
+        }
+
+        delete<Paths.DataConnector> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            dataStoreService.removeDataConnector(pathParams.dataConnectorId)
+
+            call.respond(HttpStatusCode.NoContent)
+        }
+
+        patch<Paths.DataConnector> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            val dataConnector = call.receiveOrNull<DataConnectorMessageBody>()?.data
+                ?: throw ApiException("The provided data connector data cannot be parsed")
+            dataStoreService.renameDataConnector(pathParams.dataConnectorId, dataConnector.name ?: throw ApiException("A name for data connector is required"))
+
+            call.respond(HttpStatusCode.NoContent)
+        }
+
+        post<Paths.ConnectionTest> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.ensureDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
+            val connectionProperties = call.receiveOrNull<DataConnectorMessageBody>()?.data?.properties
+                ?: throw ApiException("The provided data connector configuration cannot be parsed")
+            val connectionString = connectionProperties[connectionStringPropertyName]
+            val connectionTestResult =
+                if (connectionString.isNullOrBlank()) dataStoreService.testDatabaseConnection(connectionProperties)
+                else dataStoreService.testDatabaseConnection(connectionString)
+
+            call.respond(HttpStatusCode.OK,
+                DataConnectorConnectivityMessageBody(DataConnectorConnectivity(connectionTestResult)))
         }
     }
 }
